style.css
* {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 18px;
  color: white;
}

body {
  background-color: black;
}

h1 {
  font-size: 30px;
  background-color: orange;
  text-align: center;
  width: 300px;
  margin: auto;
  padding: 10px 0;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  max-width: 300px;
  margin: 70px auto;
  gap: 10px;
  padding: 50px;
  border: 3px solid orange;
}

.row {
  display: flex;
  gap: 10px;
}

.row button {
  width: 60px;
  height: 60px;
  background-color: orange;
  border-radius: 30px;
  border: none;
  cursor: pointer;
}

.row button:hover {
  background-color: rgb(237, 177, 67);
  width: 70px;
  height: 70px;
  font-size: 20px;
  border-radius: 35px;
}

.display {
  align-self: self-start;
  padding: 0 20px;
  margin-bottom: 20px;
  font-size: 24px;
  overflow: hidden;
}

